# nncmpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NEWS  README.adoc  config.h.in  line-editor.c  mpd.c  nncmpp.actions  nncmpp.actions.awk  nncmpp.adoc  nncmpp.c
cmake/: FindNcursesw.cmake  FindUnistring.cmake
contrib/: dark-theme-16.conf  light-theme-256.conf
info/: 10-azlyrics.pl
